feat: add rotation support